# crypto-analysis

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
analysis/: __init__.py  backtests.py  crypto_analysis.ipynb  exploratory.py  technical_indicators.py
config/: __init__.py
data/: __init__.py  fetch_data.py
docs/: CONTRIBUTING.md  FUNCTION_REFERENCE.md  KERNEL_SETUP.md  PROJECT_STRUCTURE.md  REORGANIZATION.md
scripts/: setup_kernel.sh
strategies/: __init__.py  signals.py
tests/: __init__.py  test_fetch_data.py  test_indicators.py  test_strategies.py
utils/: helpers.py
